k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-widget-ingress
  namespace: chat-widget
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: "13.232.3.204"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5173
